# MailUnit

./: .gitignore  CMakeLists.txt  README.md  index.html  main.css
Cert/: cert.pem  key.pem  password.txt
Contents/: main.css  main.js
Doxygen/: Doxyfile  doxygen_sqlite3.db
Doxygen/Groups/: EMail.dox
Doxygen/Pages/: Main.dox
Doxygen/Snippets/RFC/: AddressSpec.html  ContentTypeSpec.html  DateSpec.html  HeaderSpec.html  IdentificationFieldsSpec.html
Gui/: Main.cpp
Include/LibMailUnit/: Def.h  IO.h  Mail.h  MailUnit.h  Memory.h  Message.h
Include/LibMailUnit/Mail/: DateTime.h  Headers.h  MessageId.h
Include/LibMailUnit/Message/: ContentType.h  DateTime.h  MailHeader.h  Mailbox.h  MessageId.h  Mime.h
Include/LibMailUnit/Mime/: MessageId.h
Include/LibMailUnit/Mqp/: Client.h
LibMailUnit/: ApiObject.cpp  ApiObject.h  Def.h  InternalMemory.h  MailUnit.h  Memory.cpp  Memory.h
LibMailUnit/Api/: ApiObject.cpp  ApiObject.h
LibMailUnit/Api/Impl/: ApiObject.cpp  ApiObject.h  StringList.cpp  StringList.h
LibMailUnit/Api/Include/: Def.h  Message.h  StringList.h
LibMailUnit/Api/Message/: ContentType.cpp  ContentType.h  DateTime.cpp  MailHeader.cpp  MailHeader.h  Mailbox.cpp  Mailbox.h  MessageId.cpp  MessageId.h  Mime.cpp  Mime.h
LibMailUnit/Mail/: Address.cpp  Address.h  ContentType.cpp  ContentType.h  DateTime.cpp  DateTime.h  Headers.cpp  Headers.h  Mailbox.cpp  Mailbox.h  MailboxGroup.h  MessageId.cpp  MessageId.h  Mime.cpp  Mime.h
LibMailUnit/Message/: ContentType.cpp  ContentType.h  Headers.cpp  Headers.h  Mailbox.cpp  Mailbox.h  Mime.cpp  Mime.h
LibMailUnit/Mqp/: Client.cpp  Client.h  Command.h  Message.h  MqpClient.cpp  MqpClient.h  Response.h
MailUnit/: Config.cpp  Config.h  Exception.h  Logger.cpp  Logger.h  Main.cpp
MailUnit.Net/: .gitignore  MailUnit.Net.sln
MailUnit.Net/MailUnit.Net/: MailUnit.Net.csproj  MqpClient.cs
MailUnit.Net/MailUnit.Net/Properties/: AssemblyInfo.cs
MailUnit.Net/TestMqpClient/: Program.cs  TestMqpClient.csproj
MailUnit.Net/TestMqpClient/Properties/: AssemblyInfo.cs
MailUnit/Client/: Temp.cpp
MailUnit/Common/: Email.h
MailUnit/Common/Email/: MessageId.h
MailUnit/IO/: AsyncFileWriter.cpp  AsyncFileWriter.h  AsyncLambdaWriter.cpp  AsyncLambdaWriter.h  AsyncOperation.h  AsyncSequenceOperation.h  AsyncWriter.h  IODef.h
MailUnit/Mqp/: Error.h  ServerRequestHandler.cpp  ServerRequestHandler.h
MailUnit/OS/: FileSystem.cpp  FileSystem.h
MailUnit/Server/: Application.cpp  Application.h  Aux.h  Config.cpp  Config.h  Exception.h  Logger.cpp  Logger.h  RequestHandler.h  Session.h  SmtpController.cpp  SmtpController.h  TlsContext.cpp  TlsContext.h
MailUnit/Server/Email/: Address.cpp  Address.h  DateTime.cpp  DateTime.h  Header.cpp  Header.h  MessageId.cpp  MessageId.h  Mime.cpp  Mime.h
MailUnit/Server/Smtp/: Message.h  ProtocolDef.h  ResponseCode.cpp  ResponseCode.h  Server.cpp  Server.h  SessionProvider.cpp  SessionProvider.h
MailUnit/Server/Tcp/: TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h
MailUnit/Smtp/: Protocol.cpp  Protocol.h  ProtocolExtension.h  Response.cpp  Response.h  ResponseCode.cpp  ResponseCode.h  ServerRequestHandler.cpp  ServerRequestHandler.h
MailUnit/Smtp/StateMachine/: DataHeaderState.h  DataState.cpp  DataState.h  EhloState.h  Event.h  InvalidMailFromState.h  InvalidRcptToState.h  MailFromState.cpp  MailFromState.h  QuitState.h  RcptToState.cpp  RcptToState.h  ReadyState.h  SingleLineCmdState.cpp  SingleLineCmdState.h  StartState.h  StateBase.h  StateMachine.h
MailUnit/Storage/: Edsl.cpp  Edsl.h  Email.cpp  Email.h  Repository.cpp  Repository.h
MailUnitUI/: Config.cpp  Config.h  Main.cpp  MainWindow.cpp  MainWindow.h  Message.h  MqpClient.cpp  MqpClient.h  ServerConfig.cpp  ServerConfig.h
MailUnitUI/Gui/: AboutDialog.h  AboutDialog.ui  HtmlView.cpp  HtmlView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageListView.cpp  MessageListView.h  QueryWidget.cpp  QueryWidget.h  QueryWidget.ui  ServerDialog.h  ServerDialog.ui
MailUnitUI/MqpClient/: Message.h  MimeMessage.cpp  MimeMessage.h  MqpClient.cpp  MqpClient.h  MqpMessage.cpp  MqpMessage.h  MqpMessageRepository.h  ServerConfig.cpp  ServerConfig.h
MailUnitUI/Resources/: Resources.qrc
SQLite/: sqlite3ext.h
Source/LibMailUnit/: InternalMemory.h  Memory.cpp
Source/LibMailUnit/Mail/: DateTime.cpp  Headers.cpp  Mailbox.h  MailboxGroup.cpp  MessageId.cpp
Source/LibMailUnit/Mime/: MessageId.cpp
Source/MailUnit/: Application.cpp  Application.h  Aux.h  Config.cpp  Config.h  Def.h  DeferredPointer.h  Email.cpp  Email.h  EnumMap.h  Exception.h  Logger.cpp  Logger.h  Main.cpp  OS.cpp  OS.h  OSDef.h  SmtpController.cpp  SmtpController.h  StringEx.h
Source/MailUnit/Database/: Database.h  Email.cpp  Email.h  SQLite.cpp  SQLite.h  Sql.h
Source/MailUnit/Email/: Address.cpp  Address.h  DateTime.cpp  DateTime.h  Header.cpp  Header.h  MessageId.cpp  MessageId.h  Mime.cpp  Mime.h
Source/MailUnit/IO/: AsyncFileWriter.h  AsyncLambdaWriter.h  IODef.h  (+1 more)
StubMTP/: Application.cpp  Application.h  Aux.h  Config.cpp  Config.h  Exception.h  Logger.cpp  Logger.h  Main.cpp  SmtpController.cpp  SmtpController.h
StubMTP/Database/: Sql.h
StubMTP/Email/: Address.cpp  Address.h  DateTime.cpp  DateTime.h  Header.cpp  Header.h  MessageId.cpp  MessageId.h  Mime.cpp  Mime.h
StubMTP/Server/: Application.cpp  Application.h  Aux.h  Config.cpp  Config.h  Exception.h  Logger.cpp  Logger.h  SmtpController.cpp  SmtpController.h
StubMTP/Smtp/: Message.h  ProtocolDef.h  ResponseCode.cpp  ResponseCode.h  Server.cpp  Server.h  SessionProvider.cpp  SessionProvider.h
Tests/: Main.cpp  TestFixture.cpp  TestFixture.h
Tests/LibMailUnit/: Address.cpp  ContentType.cpp  DateTime.cpp  Headers.cpp  Memory.cpp  MessageId.cpp  Mime.cpp
Tests/MailUnit/: DeferredPointer.cpp  Edsl.cpp  File.cpp  Repository.cpp  SmtpPorotocol.cpp
src/: Main.cpp  SmtpController.cpp  SmtpController.h
src/Smtp/: Message.h  ResponseCode.cpp  ResponseCode.h  Server.cpp  Server.h  SessionProvider.cpp  SessionProvider.h  SessionStateMachine.cpp  SessionStateMachine.h
(+143 files in other folders)
